--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpstan/phpdoc-parser": "^1.23",
         "railsware/mailtrap-php": "*",
         "stof/doctrine-extensions-bundle": "^1.8",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
