--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=ad1caa7c194d39502601602f4e87c31c
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://root@127.0.0.1:3306/hr_management?serverVersion=10.4.27-MariaDB"
-DATABASE_URL="mysql://u577871796_h:2dY7z]vN^@rv928.hstgr.io:3306/u577871796_hr?serverVersion=5.1.1"
+DATABASE_URL="mysql://u577871796_h:2dY7z]vN^@145.14.156.1:3306/u577871796_hr?serverVersion=5.1.1"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
